Prevent length bars from wrapping onto next line

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
 
 #boardDiv{
 	position:relative;
+	white-space:nowrap;
 }
 
 #lengthBar{
